# parallel-algo-course

hw1_quicksort/: CMakeLists.txt  main.cpp  par.cpp  readme  results.ipynb  seq.cpp
hw2_bfs/: CMakeLists.txt  bfs.cpp  bfs.ipynb  cubic_graph.cpp  main.cpp  readme  simple_graph.txt
